# TradingEngine

./: .gitignore
ExecutionSystem/: ARCHITECTURE.md  CMakeLists.txt  analyze_performance.py  market_data.csv  setup.sh
ExecutionSystem/.cache/clangd/index/: BinanceMarketData.cpp.B98664BEC257D3F5.idx  BinanceMarketData.hpp.51C2226EED92148E.idx  ExecutionReport.hpp.B5CBE5E894F88795.idx  MarketDataAdapter.hpp.D84A995CAE078E2C.idx  OrderGateway.cpp.9676E80B98518429.idx  OrderGateway.hpp.10252608FED3E8DC.idx  Types.hpp.27279806D49CD9FC.idx  main.cpp.09A041DE8791F5C0.idx
ExecutionSystem/include/: BinanceMarketData.hpp  ExecutionReport.hpp  LatencyMonitor.hpp  LockFreeQueue.hpp  Logger.hpp  MarketDataAdapter.hpp  MarketDataReplay.hpp  ObjectPool.hpp  OrderBook.hpp  OrderGateway.hpp  OrderManager.hpp  RiskManager.hpp  Strategy.hpp  SymbolManager.hpp  ThreadUtils.hpp  Types.hpp
ExecutionSystem/src/: OrderGateway.cpp  main.cpp
ExecutionSystem/src/market_data/: BinanceMarketData.cpp
